<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/snapshotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/snapshot_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/snapshotSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snapshot_subtitle"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/snapshotTitle"
        app:layout_constraintTop_toBottomOf="@+id/snapshotTitle" />

    <LinearLayout
        android:id="@+id/snapshotContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snapshotSubtitle">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/snapshotHeadphonesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/headphones_state"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/snapshotLocationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/user_location"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/snapshotActivityContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/user_activity"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <TextView
        android:id="@+id/fenceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fence_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snapshotContainer" />

    <TextView
        android:id="@+id/fenceSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fence_subtitle"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fenceTitle"
        app:layout_constraintTop_toBottomOf="@+id/fenceTitle" />

    <ScrollView
        android:id="@+id/fenceParametersScrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fenceTitle">

        <LinearLayout
            android:id="@+id/fenceParametersContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/fenceHeadphonesConnect"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_headphones_connect" />

            <CheckBox
                android:id="@+id/fenceHeadphonesDisconnect"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_headphones_disconnect" />

            <CheckBox
                android:id="@+id/fenceUserIdle"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_user_idle" />

            <CheckBox
                android:id="@+id/fenceUserStartWalking"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_user_start_walking" />

            <CheckBox
                android:id="@+id/fenceUserWalking"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_user_walking" />

            <CheckBox
                android:id="@+id/fenceUserStopWalking"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_user_stop_walking" />

            <CheckBox
                android:id="@+id/fenceUserInCar"
                style="@style/CheckBoxFenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fence_user_in_car" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/fenceLogTv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:clickable="false"
        android:gravity="center|top"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fenceSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fenceTrackingBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange50"
        android:text="@string/start_tracking"
        android:textColor="@android:color/white"
        app:cornerRadius="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>